Renamed the "Wrapped" strings into "Compiled"

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -668,7 +668,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
 ## MAIN MODULE'S INITIALIZER PATH
 
-# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the wrapped file.
+# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the compiled file.
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
@@ -876,7 +876,7 @@ fi
 
 ## BASH UTIILS SUB-FOLDERS PATHS
 
-# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the wrapped file.
+# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the compiled file.
 
 BU.Main.ModConfig.Module.BUSubFoldersPaths;
 
@@ -884,7 +884,7 @@ BU.Main.ModConfig.Module.BUSubFoldersPaths;
 
 ## BASH UTILS DEV-TOOLS PATHS
 
-# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the wrapped file.
+# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the compiled file.
 
 # The function call has been moved to the "Initializer.sh" script of the main module, in the "STEP THREE : PROCESSING THE MAIN MODULE'S PARAMETERS" category,
 # because these folders are only used by the development tools provided with the framework, and are therefore useless in another project.
@@ -895,7 +895,7 @@ BU.Main.ModConfig.Module.BUSubFoldersPaths;
 
 ## "lib" FOLDER'S CONTENT.
 
-# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the wrapped file.
+# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the compiled file.
 
 BU.Main.ModConfig.Module.BULibFolderContent;
 
@@ -909,7 +909,7 @@ BU.Main.ModConfig.Module.BULibFolderContent;
 
 ## MAIN MODULE'S "config" FOLDER'S CONTENT
 
-# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the wrapped file.
+# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the compiled file.
 
 BU.Main.ModConfig.Module.MainModuleConfigFolderContent;
 
@@ -917,7 +917,7 @@ BU.Main.ModConfig.Module.MainModuleConfigFolderContent;
 
 ## MAIN MODULE'S INITIALIZER PATH
 
-# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the wrapped file.
+# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the compiled file.
 
 BU.Main.ModConfig.Module.MainModuleInitializerPath;
 
