Adding more informations to the functions, and added new separators in order to better distinguish diffetrent functions and to keep them into a compiled file thanks to a new option to develop in the "lib-compilerV3.sh" compiler

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -17,7 +17,7 @@
 # Advanced project's debug variable
 
 # This variable accepts "category", "file", "function", "module", "sub-category" "subcategory" (both last values do the same thing) or nothing as values,
-# if the value of the "${__BU_MODULE_INIT_STAT_DEBUG}" status global variable is equal to 'true'.
+# if the value of the "${__BU_MODULE_INIT_STAT_DEBUG}" global status variable is equal to 'true'.
 # Default value : "file"
 
 if [ "${__BU_MODULE_INIT_STAT_DEBUG}" == 'false' ]; then
