--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2292,7 +2292,10 @@ alias BU.IsAndroid10='BU.Main.OS.IsAndroid10';
 alias BU.IsAndroid11='BU.Main.OS.IsAndroid11';
 
 alias BU.IsAndroidDeviceSmartphone='function BU.Main.OS.IsAndroidDeviceSmartphone';
+alias BU.IsAndroidDeviceSmartphoneRooted='function BU.Main.OS.IsAndroidDeviceSmartphoneRooted';
+
 alias BU.IsAndroidDeviceTablet='BU.Main.OS.IsAndroidDeviceTablet';
+alias BU.IsAndroidDeviceTabletRooted='BU.Main.OS.IsAndroidDeviceTabletRooted';
 
 alias BU.IsAndroidRooted='BU.Main.OS.IsAndroidRooted';
 
