--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2291,13 +2291,43 @@ alias BU.IsAndroid9='BU.Main.OS.IsAndroid9';
 alias BU.IsAndroid10='BU.Main.OS.IsAndroid10';
 alias BU.IsAndroid11='BU.Main.OS.IsAndroid11';
 
+alias BU.IsAndroidRooted='BU.Main.OS.IsAndroidRooted';
+
+alias BU.IsAndroidManufAlcatel='function BU.Main.OS.IsAndroidManufacturerAlcatel';
+alias BU.IsAndroidManufASUS='function BU.Main.OS.IsAndroidManufacturerASUS';
+alias BU.IsAndroidManufGoogle='function BU.Main.OS.IsAndroidManufacturerGoogle';
+alias BU.IsAndroidManufHTC='function BU.Main.OS.IsAndroidManufacturerHTC';
+alias BU.IsAndroidManufHuawei='function BU.Main.OS.IsAndroidManufacturerHuawei';
+alias BU.IsAndroidManufLG='function BU.Main.OS.IsAndroidManufacturerLG';
+alias BU.IsAndroidManufMotorola='function BU.Main.OS.IsAndroidManufacturerMotorola';
+alias BU.IsAndroidManufOppo='function BU.Main.OS.IsAndroidManufacturerOppo';
+alias BU.IsAndroidManufSamsung='function BU.Main.OS.IsAndroidManufacturerSamsung';
+alias BU.IsAndroidManufSony='function BU.Main.OS.IsAndroidManufacturerSony';
+alias BU.IsAndroidManufVivo='function BU.Main.OS.IsAndroidManufacturerVivo';
+alias BU.IsAndroidManufXiaomi='function BU.Main.OS.IsAndroidManufacturerXiaomi';
+
 alias BU.IsAndroidDeviceSmartphone='function BU.Main.OS.IsAndroidDeviceSmartphone';
 alias BU.IsAndroidDeviceSmartphoneRooted='function BU.Main.OS.IsAndroidDeviceSmartphoneRooted';
+
+alias BU.IsAndroidPhoneManufAlcatel='function BU.Main.OS.IsAndroidSmartphoneManufacturerAlcatel';
+alias BU.IsAndroidPhoneManufASUS='function BU.Main.OS.IsAndroidSmartphoneManufacturerASUS';
+alias BU.IsAndroidPhoneManufGoogle='function BU.Main.OS.IsAndroidSmartphoneManufacturerGoogle';
+alias BU.IsAndroidPhoneManufHTC='function BU.Main.OS.IsAndroidSmartphoneManufacturerHTC';
+alias BU.IsAndroidPhoneManufHuawei='function BU.Main.OS.IsAndroidSmartphoneManufacturerHuawei';
+alias BU.IsAndroidPhoneManufLG='function BU.Main.OS.IsAndroidSmartphoneManufacturerLG';
+alias BU.IsAndroidPhoneManufMotorola='function BU.Main.OS.IsAndroidSmartphoneManufacturerMotorola';
+alias BU.IsAndroidPhoneManufOppo='function BU.Main.OS.IsAndroidSmartphoneManufacturerOppo';
+alias BU.IsAndroidPhoneManufSamsung='function BU.Main.OS.IsAndroidSmartphoneManufacturerSamsung';
+alias BU.IsAndroidPhoneManufSony='function BU.Main.OS.IsAndroidSmartphoneManufacturerSony';
+alias BU.IsAndroidPhoneManufVivo='function BU.Main.OS.IsAndroidSmartphoneManufacturerVivo';
+alias BU.IsAndroidPhoneManufXiaomi='function BU.Main.OS.IsAndroidSmartphoneManufacturerXiaomi';
 
 alias BU.IsAndroidDeviceTablet='BU.Main.OS.IsAndroidDeviceTablet';
 alias BU.IsAndroidDeviceTabletRooted='BU.Main.OS.IsAndroidDeviceTabletRooted';
 
-alias BU.IsAndroidRooted='BU.Main.OS.IsAndroidRooted';
+alias BU.IsAndroidTabManufASUS='function BU.Main.OS.IsAndroidTabletManufacturer';
+alias BU.IsAndroidTabManufHuawei='function BU.Main.OS.IsAndroidTabletManufacturer';
+alias BU.IsAndroidTabManufSamsung='function BU.Main.OS.IsAndroidTabletManufacturerSamsung';
 
 ## ----------------------------------------------
 
