--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2532,32 +2532,33 @@ alias BU.IsOSLinuxDistroSUSE='BU.Main.OS.IsLinuxDistroSUSE';
 alias BU.IsOSLinuxDistroUbuntu='BU.Main.OS.IsLinuxDistroUbuntu';
 
 # Checking Ubuntu versions.
-alias BU.IsOSLinuxDistroUbuntu1004='BU.Main.OS.IsLinuxDistroUbuntu1004';
-alias BU.IsOSLinuxDistroUbuntu1010='BU.Main.OS.IsLinuxDistroUbuntu1010';
-alias BU.IsOSLinuxDistroUbuntu1104='BU.Main.OS.IsLinuxDistroUbuntu1104';
-alias BU.IsOSLinuxDistroUbuntu1110='BU.Main.OS.IsLinuxDistroUbuntu1110';
-alias BU.IsOSLinuxDistroUbuntu1204='BU.Main.OS.IsLinuxDistroUbuntu1204';
-alias BU.IsOSLinuxDistroUbuntu1210='BU.Main.OS.IsLinuxDistroUbuntu1210';
-alias BU.IsOSLinuxDistroUbuntu1304='BU.Main.OS.IsLinuxDistroUbuntu1304';
-alias BU.IsOSLinuxDistroUbuntu1310='BU.Main.OS.IsLinuxDistroUbuntu1310';
-alias BU.IsOSLinuxDistroUbuntu1404='BU.Main.OS.IsLinuxDistroUbuntu1404';
-alias BU.IsOSLinuxDistroUbuntu1410='BU.Main.OS.IsLinuxDistroUbuntu1410';
-alias BU.IsOSLinuxDistroUbuntu1504='BU.Main.OS.IsLinuxDistroUbuntu1504';
-alias BU.IsOSLinuxDistroUbuntu1510='BU.Main.OS.IsLinuxDistroUbuntu1510';
-alias BU.IsOSLinuxDistroUbuntu1604='BU.Main.OS.IsLinuxDistroUbuntu1604';
-alias BU.IsOSLinuxDistroUbuntu1610='BU.Main.OS.IsLinuxDistroUbuntu1610';
-alias BU.IsOSLinuxDistroUbuntu1704='BU.Main.OS.IsLinuxDistroUbuntu1704';
-alias BU.IsOSLinuxDistroUbuntu1710='BU.Main.OS.IsLinuxDistroUbuntu1710';
-alias BU.IsOSLinuxDistroUbuntu1804='BU.Main.OS.IsLinuxDistroUbuntu1804';
-alias BU.IsOSLinuxDistroUbuntu1810='BU.Main.OS.IsLinuxDistroUbuntu1810';
-alias BU.IsOSLinuxDistroUbuntu1904='BU.Main.OS.IsLinuxDistroUbuntu1904';
-alias BU.IsOSLinuxDistroUbuntu1910='BU.Main.OS.IsLinuxDistroUbuntu1910';
-alias BU.IsOSLinuxDistroUbuntu2004='BU.Main.OS.IsLinuxDistroUbuntu2004';
-alias BU.IsOSLinuxDistroUbuntu2010='BU.Main.OS.IsLinuxDistroUbuntu2010';
-alias BU.IsOSLinuxDistroUbuntu2104='BU.Main.OS.IsLinuxDistroUbuntu2104';
-alias BU.IsOSLinuxDistroUbuntu2110='BU.Main.OS.IsLinuxDistroUbuntu2110';
-alias BU.IsOSLinuxDistroUbuntu2204='BU.Main.OS.IsLinuxDistroUbuntu2204';
-alias BU.IsOSLinuxDistroUbuntu2210='BU.Main.OS.IsLinuxDistroUbuntu2210';
+alias BU.IsOSLinuxDistroUbuntu10_04='BU.Main.OS.IsLinuxDistroUbuntu10_04';
+alias BU.IsOSLinuxDistroUbuntu10_10='BU.Main.OS.IsLinuxDistroUbuntu10_10';
+alias BU.IsOSLinuxDistroUbuntu11_04='BU.Main.OS.IsLinuxDistroUbuntu11_04';
+alias BU.IsOSLinuxDistroUbuntu11_10='BU.Main.OS.IsLinuxDistroUbuntu11_10';
+alias BU.IsOSLinuxDistroUbuntu12_04='BU.Main.OS.IsLinuxDistroUbuntu12_04';
+alias BU.IsOSLinuxDistroUbuntu12_10='BU.Main.OS.IsLinuxDistroUbuntu12_10';
+alias BU.IsOSLinuxDistroUbuntu13_04='BU.Main.OS.IsLinuxDistroUbuntu13_04';
+alias BU.IsOSLinuxDistroUbuntu13_10='BU.Main.OS.IsLinuxDistroUbuntu13_10';
+alias BU.IsOSLinuxDistroUbuntu14_04='BU.Main.OS.IsLinuxDistroUbuntu14_04';
+alias BU.IsOSLinuxDistroUbuntu14_10='BU.Main.OS.IsLinuxDistroUbuntu14_10';
+alias BU.IsOSLinuxDistroUbuntu15_04='BU.Main.OS.IsLinuxDistroUbuntu15_04';
+alias BU.IsOSLinuxDistroUbuntu15_10='BU.Main.OS.IsLinuxDistroUbuntu15_10';
+alias BU.IsOSLinuxDistroUbuntu16_04='BU.Main.OS.IsLinuxDistroUbuntu16_04';
+alias BU.IsOSLinuxDistroUbuntu16_10='BU.Main.OS.IsLinuxDistroUbuntu16_10';
+alias BU.IsOSLinuxDistroUbuntu17_04='BU.Main.OS.IsLinuxDistroUbuntu17_04';
+alias BU.IsOSLinuxDistroUbuntu17_10='BU.Main.OS.IsLinuxDistroUbuntu17_10';
+alias BU.IsOSLinuxDistroUbuntu18_04='BU.Main.OS.IsLinuxDistroUbuntu18_04';
+alias BU.IsOSLinuxDistroUbuntu18_10='BU.Main.OS.IsLinuxDistroUbuntu18_10';
+alias BU.IsOSLinuxDistroUbuntu19_04='BU.Main.OS.IsLinuxDistroUbuntu19_04';
+alias BU.IsOSLinuxDistroUbuntu19_10='BU.Main.OS.IsLinuxDistroUbuntu19_10';
+alias BU.IsOSLinuxDistroUbuntu20_04='BU.Main.OS.IsLinuxDistroUbuntu20_04';
+alias BU.IsOSLinuxDistroUbuntu20_10='BU.Main.OS.IsLinuxDistroUbuntu20_10';
+alias BU.IsOSLinuxDistroUbuntu21_04='BU.Main.OS.IsLinuxDistroUbuntu21_04';
+alias BU.IsOSLinuxDistroUbuntu21_10='BU.Main.OS.IsLinuxDistroUbuntu21_10';
+alias BU.IsOSLinuxDistroUbuntu22_04='BU.Main.OS.IsLinuxDistroUbuntu22_04';
+alias BU.IsOSLinuxDistroUbuntu22_10='BU.Main.OS.IsLinuxDistroUbuntu22_10';
+alias BU.IsOSLinuxDistroUbuntu23_04='BU.Main.OS.IsLinuxDistroUbuntu23_04';
 
 # --------------------
 
