--- a/install/.Bash-utils/config/modules/Software/OSMgr.conf
+++ b/install/.Bash-utils/config/modules/Software/OSMgr.conf
@@ -13,7 +13,18 @@
 
 ##
 
+# ······························································································································
 # Getting the user's current operating system, and storing the information in the "${__BU_SOFTWARE_CURRENT_OS}" global variable.
+
+# Featured function(s) and file(s) by module(s) and from the "functions" folder :
+#   - BU.Main.OS.IsAndroid()    -> Main -> OS.lib
+#   - BU.Main.OS.IsBSD()        -> Main -> OS.lib
+#   - BU.Main.OS.IsChrome()     -> Main -> OS.lib
+#   - BU.Main.OS.IsHaiku()      -> Main -> OS.lib
+#   - BU.Main.OS.IsLinux()      -> Main -> OS.lib
+#   - BU.Main.OS.IsOSX()        -> Main -> OS.lib
+#   - BU.Main.OS.IsWindows()    -> Main -> OS.lib
+
 function BU.Software.ModConfig.OSMgr.GetCurrentOS()
 {
     #**** Parameters ****
