--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -13,7 +13,9 @@
 
 ## COLUMNS AND LINES
 
+# ······································································
 # Writing the command substitution text when the text mode is processed.
+
 # shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Text.PrintTextModeCmdSubs()  { printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintTextModeCmdSubs__FNCT}" "${1}" "${1}"; }
 
@@ -21,15 +23,21 @@ function BU.Main.ModConfig.Text.PrintTextModeCmdSubs()  { printf "${__BU_MODULE_
 
 ## TEXT FORMATTING
 
+# ···································································
 # Writing the command substitution text when a formatting is defined.
+
 # shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Text.PrintFormatCmdSubs()    { printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintFormatCmdSubs__FNCT}" "${1}"; }
 
+# ··································································
 # Writing the command substitution text when a resetting is defined.
+
 # shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Text.PrintResetCmdSubs()     { printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintResetCmdSubs__FNCT}" "${1}"; }
 
+# ········································································
 # Writing the command substitution text when a total resetting is defined.
+
 # shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintAllResetCmdSubs__FNCT}"; }
 
@@ -43,7 +51,9 @@ function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "${__BU_MODULE_
 
 ## ERROR FUNCTIONS
 
+# ······························································································
 # Writing the name of the variable that could not be initialized with it's command substitution.
+
 function BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize() {
     # ${1} -> Variable's name | ${2} -> "$(basename "${BASH_SOURCE[0]}")" | ${3} -> LINENO (line number)
     BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "$(( LINENO - 2 ))" 'E_BUINIT__BU_MAIN_MODCONFIG__TEXT_VAR_NOT_INIT';
@@ -74,12 +84,16 @@ function BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize() {
 
 ## COLUMNS AND LINES
 
+# ·····················································································
 # Getting the columns number on the current text mode according to its window's length.
+
 __BU_MAIN_TXT_COLS="$(tput cols || stty size | cut -d " " -f2)";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_COLS' "${__BU_MAIN_TXT_COLS}" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'cols')" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
+# ···················································································
 # Getting the lines number on the current text mode according to its window's height.
+
 __BU_MAIN_TXT_LINES="$(tput lines || stty size | cut -d " " -f1)";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "${__BU_MAIN_TXT_LINES}" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'lines')" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
@@ -88,16 +102,23 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "${__BU_MAIN_TXT_
 
 ## PRINTING CHARACTERS
 
+# ············································································································································································
 # Caractère utilisé pour dessiner les lignes des headers. Si vous souhaitez mettre un autre caractère à la place d'un tiret, changez le caractère entre les double guillemets.
 # Ne mettez pas plus d'un caractère si vous ne souhaitez pas voir le texte de chaque header apparaître entre plusieurs lignes (une ligne de chaque caractère).
-__BU_MAIN_TXT_CHAR_HEADER_LINE="-"		# Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
 
+# Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
+
+__BU_MAIN_TXT_CHAR_HEADER_LINE="-";
+
+# ··········································································································································································
 # Since the color global variables are defined in the "Colors.conf" file, AND since this file is already sourced before this file, it's safe to call these global variables.
 
 # shellcheck disable=SC2059
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_CHAR_HEADER_LINE' "${__BU_MAIN_TXT_CHAR_HEADER_LINE}" 'Char' "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_CHAR_HEADER_LINE__VAR}" "${__BU_MAIN_COLOR_TXT_FUNCTION}BU.Main.Headers.DrawLine${__BU_MAIN_COLOR_TXT_RESET}")" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
+# ···································································
 # Affichage de chevrons avant une chaîne de caractères (par exemple).
+
 __BU_MAIN_TXT_PRINT_TAB=">>>>";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_PRINT_TAB' "${__BU_MAIN_TXT_PRINT_TAB}" 'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_PRINT_TAB__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
@@ -111,8 +132,12 @@ __BU_MAIN_TXT_STORE_LINE="";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_LINE' "${__BU_MAIN_TXT_STORE_LINE}" 'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_LINE__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
-# Getting the messages printed with the "${__BU_MAIN_STAT_ECHO}='true'" status ?
-__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=();    # Note : since this variable is an array, please leave empty the second argument of the "BU.ModuleInit.DisplayInitGlobalVarsInfos()" function.
+# ·····························································································
+# Getting the messages printed with the "${__BU_MAIN_STAT_ECHO}='true'" global status variable.
+
+# Note : since this variable is an array, please leave empty the second argument of the "BU.ModuleInit.DisplayInitGlobalVarsInfos()" function.
+
+__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=();
 
 # shellcheck disable=SC2059
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "" 'Array' "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY__ARRAY}" "${__BU_MAIN_COLOR_TXT_VAR}\${__BU_MAIN_STAT_ECHO}${__BU_MAIN_COLOR_TXT_RESET}" "${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}")" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 3 ))";
@@ -121,7 +146,9 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES
 
 ## SUBSTRINGS
 
+# ···································
 # Splitting a string into substrings.
+
 __BU_MAIN_TXT_ERR_SUBSTR_DELIM=' [/|\] ';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' "${__BU_MAIN_TXT_ERR_SUBSTR_DELIM}" "String" "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_ERR_SUBSTR_DELIM__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
@@ -130,7 +157,13 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' "${__B
 
 ## TEXT FORMATTING
 
-# Wrapping the code in a function to prevent the command substitutions from being executed, so that bugs are not ignored when sourcing configuration files in the loop of the "BU.Main.Initializer.SourceConfig()" function of the main module's initializer file.
+# ····································································································································
+# Wrapping the code in a function to prevent the command substitutions from being executed, so that bugs are not ignored when sourcing
+# configuration files in the loop of the "BU.Main.Initializer.SourceConfig()" function of the main module's initializer file.
+
+# Featured function(s) and file(s) by module(s) and from the "functions" folder :
+#   - Feel free to call a function if it is needed for your contribution.
+
 function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 {
     #**** Variables ****
