--- a/install/.Bash-utils/config/modules/Software/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Software/Aliases.conf
@@ -58,24 +58,57 @@ alias BU.Bootstrap.Uninstall='BU.Software.Frameworks.Bootstrap.Uninstall';
 ## SUB-CATEGORY : "ANGULAR"
 
 alias BU.AngularJS.Install='BU.Software.Frameworks.AngularJS.Install';
+alias BU.AngularJS.Install.Linux='BU.Software.Linux.Frameworks.AngularJS.Install';
+alias BU.AngularJS.Install.OSX='BU.Software.OSX.Frameworks.AngularJS.Install';
+alias BU.AngularJS.Install.Windows='BU.Software.Windows.Frameworks.AngularJS.Install';
+
 alias BU.AngularJS.Update='BU.Software.Frameworks.AngularJS.Update';
+alias BU.AngularJS.Update.Linux='BU.Software.Linux.Frameworks.AngularJS.Update';
+alias BU.AngularJS.Update.OSX='BU.Software.OSX.Frameworks.AngularJS.Update';
+alias BU.AngularJS.Update.Windows='BU.Software.Windows.Frameworks.AngularJS.Update';
+
 alias BU.AngularJS.Uninstall='BU.Software.Frameworks.AngularJS.Uninstall';
+alias BU.AngularJS.Uninstall.Linux='BU.Software.Linux.Frameworks.AngularJS.Uninstall';
+alias BU.AngularJS.Uninstall.OSX='BU.Software.OSX.Frameworks.AngularJS.Uninstall';
+alias BU.AngularJS.Uninstall.Windows='BU.Software.Windows.Frameworks.AngularJS.Uninstall';
 
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "REACT JS"
 
 alias BU.ReactJS.Install='BU.Software.Frameworks.ReactJS.Install';
+alias BU.ReactJS.Install.Linux='BU.Software.Frameworks.ReactJS.Install';
+alias BU.ReactJS.Install.OSX='BU.Software.Frameworks.ReactJS.Install';
+alias BU.ReactJS.Install.Windows='BU.Software.Windows.Frameworks.ReactJS.Install';
+
 alias BU.ReactJS.Update='BU.Software.Frameworks.ReactJS.Update';
+alias BU.ReactJS.Update.Linux='BU.Software.Linux.Frameworks.ReactJS.Update';
+alias BU.ReactJS.Update.OSX='BU.Software.OSX.Frameworks.ReactJS.Update';
+alias BU.ReactJS.Update.Windows='BU.Software.Windows.Frameworks.ReactJS.Update';
+
 alias BU.ReactJS.Uninstall='BU.Software.Frameworks.ReactJS.Uninstall';
+alias BU.ReactJS.Uninstall='BU.Software.Frameworks.ReactJS.Uninstall';
+alias BU.ReactJS.Uninstall='BU.Software.Frameworks.ReactJS.Uninstall';
+alias BU.ReactJS.Uninstall.Windows='BU.Software.Windows.Frameworks.ReactJS.Uninstall';
 
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "VUE.JS"
 
 alias BU.VueJS.Install='BU.Software.Frameworks.VueJS.Install';
+alias BU.VueJS.Install='BU.Software.Frameworks.VueJS.Install';
+alias BU.VueJS.Install='BU.Software.Frameworks.VueJS.Install';
+alias BU.VueJS.Install.Windows='BU.Software.Windows.Frameworks.VueJS.Install';
+
 alias BU.VueJS.Update='BU.Software.Frameworks.VueJS.Update';
+alias BU.VueJS.Update='BU.Software.Frameworks.VueJS.Update';
+alias BU.VueJS.Update='BU.Software.Frameworks.VueJS.Update';
+alias BU.VueJS.Update.Windows='BU.Software.Windows.Frameworks.VueJS.Update';
+
 alias BU.VueJS.Uninstall='BU.Software.Frameworks.VueJS.Uninstall';
+alias BU.VueJS.Uninstall='BU.Software.Frameworks.VueJS.Uninstall';
+alias BU.VueJS.Uninstall='BU.Software.Frameworks.VueJS.Uninstall';
+alias BU.VueJS.Uninstall.Windows='BU.Software.Windows.Frameworks.VueJS.Uninstall';
 
 ## ----------------------------------------------
 
@@ -88,24 +121,57 @@ alias BU.VueJS.Uninstall='BU.Software.Frameworks.VueJS.Uninstall';
 ## SUB-CATEGORY : "CAKE PHP"
 
 alias BU.CakePHP.Install='BU.Software.Frameworks.CakePHP.Install';
+alias BU.CakePHP.Install='BU.Software.Frameworks.CakePHP.Install';
+alias BU.CakePHP.Install='BU.Software.Frameworks.CakePHP.Install';
+alias BU.CakePHP.Install.Windows='BU.Software.Windows.Frameworks.CakePHP.Install';
+
 alias BU.CakePHP.Update='BU.Software.Frameworks.CakePHP.Update';
+alias BU.CakePHP.Update='BU.Software.Frameworks.CakePHP.Update';
+alias BU.CakePHP.Update='BU.Software.Frameworks.CakePHP.Update';
+alias BU.CakePHP.Update.Windows='BU.Software.Windows.Frameworks.CakePHP.Update';
+
 alias BU.CakePHP.Uninstall='BU.Software.Frameworks.CakePHP.Uninstall';
+alias BU.CakePHP.Uninstall='BU.Software.Frameworks.CakePHP.Uninstall';
+alias BU.CakePHP.Uninstall='BU.Software.Frameworks.CakePHP.Uninstall';
+alias BU.CakePHP.Uninstall.Windows='BU.Software.Windows.Frameworks.CakePHP.Uninstall';
 
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "LARAVEL"
 
 alias BU.Laravel.Install='BU.Software.Frameworks.Laravel.Install';
+alias BU.Laravel.Install='BU.Software.Frameworks.Laravel.Install';
+alias BU.Laravel.Install='BU.Software.Frameworks.Laravel.Install';
+alias BU.Laravel.Install.Windows='BU.Software.Windows.Frameworks.Laravel.Install';
+
 alias BU.Laravel.Update='BU.Software.Frameworks.Laravel.Update';
+alias BU.Laravel.Update='BU.Software.Frameworks.Laravel.Update';
+alias BU.Laravel.Update='BU.Software.Frameworks.Laravel.Update';
+alias BU.Laravel.Update.Windows='BU.Software.Windows.Frameworks.Laravel.Update';
+
 alias BU.Laravel.Uninstall='BU.Software.Frameworks.Laravel.Uninstall';
+alias BU.Laravel.Uninstall='BU.Software.Frameworks.Laravel.Uninstall';
+alias BU.Laravel.Uninstall='BU.Software.Frameworks.Laravel.Uninstall';
+alias BU.Laravel.Uninstall.Windows='BU.Software.Windows.Frameworks.Laravel.Uninstall';
 
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "SYMFONY"
 
 alias BU.Symfony.Install='BU.Software.Frameworks.Symfony.Install';
+alias BU.Symfony.Install='BU.Software.Frameworks.Symfony.Install';
+alias BU.Symfony.Install='BU.Software.Frameworks.Symfony.Install';
+alias BU.Symfony.Install.Windows='BU.Software.Windows.Frameworks.Symfony.Install';
+
 alias BU.Symfony.Update='BU.Software.Frameworks.Symfony.Update';
+alias BU.Symfony.Update='BU.Software.Frameworks.Symfony.Update';
+alias BU.Symfony.Update='BU.Software.Frameworks.Symfony.Update';
+alias BU.Symfony.Update.Windows='BU.Software.Windows.Frameworks.Symfony.Update';
+
 alias BU.Symfony.Uninstall='BU.Software.Frameworks.Symfony.Uninstall';
+alias BU.Symfony.Uninstall='BU.Software.Frameworks.Symfony.Uninstall';
+alias BU.Symfony.Uninstall='BU.Software.Frameworks.Symfony.Uninstall';
+alias BU.Symfony.Uninstall.Windows='BU.Software.Windows.Frameworks.Symfony.Uninstall';
 
 ## ----------------------------------------------
 
@@ -118,7 +184,18 @@ alias BU.Symfony.Uninstall='BU.Software.Frameworks.Symfony.Uninstall';
 ## SUB-CATEGORY : "DJANGO"
 
 alias BU.Django.Install='BU.Software.Frameworks.Django.Install';
+alias BU.Django.Install='BU.Software.Frameworks.Django.Install';
+alias BU.Django.Install='BU.Software.Frameworks.Django.Install';
+alias BU.Django.Install='BU.Software.Frameworks.Django.Install';
+
 alias BU.Django.Update='BU.Software.Frameworks.Django.Update';
+alias BU.Django.Update='BU.Software.Frameworks.Django.Update';
+alias BU.Django.Update='BU.Software.Frameworks.Django.Update';
+alias BU.Django.Update='BU.Software.Frameworks.Django.Update';
+
+alias BU.Django.Uninstall='BU.Software.Frameworks.Django.Uninstall';
+alias BU.Django.Uninstall='BU.Software.Frameworks.Django.Uninstall';
+alias BU.Django.Uninstall='BU.Software.Frameworks.Django.Uninstall';
 alias BU.Django.Uninstall='BU.Software.Frameworks.Django.Uninstall';
 
 ## ----------------------------------------------
@@ -126,7 +203,18 @@ alias BU.Django.Uninstall='BU.Software.Frameworks.Django.Uninstall';
 ## SUB-CATEGORY : "FLASK"
 
 alias BU.Flask.Install='BU.Software.Frameworks.Flask.Install';
+alias BU.Flask.Install='BU.Software.Frameworks.Flask.Install';
+alias BU.Flask.Install='BU.Software.Frameworks.Flask.Install';
+alias BU.Flask.Install='BU.Software.Frameworks.Flask.Install';
+
 alias BU.Flask.Update='BU.Software.Frameworks.Flask.Update';
+alias BU.Flask.Update='BU.Software.Frameworks.Flask.Update';
+alias BU.Flask.Update='BU.Software.Frameworks.Flask.Update';
+alias BU.Flask.Update='BU.Software.Frameworks.Flask.Update';
+
+alias BU.Flask.Uninstall='BU.Software.Frameworks.Flask.Uninstall';
+alias BU.Flask.Uninstall='BU.Software.Frameworks.Flask.Uninstall';
+alias BU.Flask.Uninstall='BU.Software.Frameworks.Flask.Uninstall';
 alias BU.Flask.Uninstall='BU.Software.Frameworks.Flask.Uninstall';
 
 ## ----------------------------------------------
@@ -134,7 +222,18 @@ alias BU.Flask.Uninstall='BU.Software.Frameworks.Flask.Uninstall';
 ## SUB-CATEGORY : "WEB2PY"
 
 alias BU.Web2py.Install='BU.Software.Frameworks.Web2py.Install';
+alias BU.Web2py.Install='BU.Software.Frameworks.Web2py.Install';
+alias BU.Web2py.Install='BU.Software.Frameworks.Web2py.Install';
+alias BU.Web2py.Install='BU.Software.Frameworks.Web2py.Install';
+
 alias BU.Web2py.Update='BU.Software.Frameworks.Web2py.Update';
+alias BU.Web2py.Update='BU.Software.Frameworks.Web2py.Update';
+alias BU.Web2py.Update='BU.Software.Frameworks.Web2py.Update';
+alias BU.Web2py.Update='BU.Software.Frameworks.Web2py.Update';
+
+alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
+alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
+alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
 alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
 
 ## ----------------------------------------------
@@ -148,7 +247,18 @@ alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
 ## SUB-CATEGORY : "RUBY ON RAILS"
 
 alias BU.RubyOnRails.Install='BU.Software.Frameworks.RubyOnRails.Install';
+alias BU.RubyOnRails.Install='BU.Software.Frameworks.RubyOnRails.Install';
+alias BU.RubyOnRails.Install='BU.Software.Frameworks.RubyOnRails.Install';
+alias BU.RubyOnRails.Install='BU.Software.Frameworks.RubyOnRails.Install';
+
 alias BU.RubyOnRails.Update='BU.Software.Frameworks.RubyOnRails.Update';
+alias BU.RubyOnRails.Update='BU.Software.Frameworks.RubyOnRails.Update';
+alias BU.RubyOnRails.Update='BU.Software.Frameworks.RubyOnRails.Update';
+alias BU.RubyOnRails.Update='BU.Software.Frameworks.RubyOnRails.Update';
+
+alias BU.RubyOnRails.Uninstall='BU.Software.Frameworks.RubyOnRails.Uninstall';
+alias BU.RubyOnRails.Uninstall='BU.Software.Frameworks.RubyOnRails.Uninstall';
+alias BU.RubyOnRails.Uninstall='BU.Software.Frameworks.RubyOnRails.Uninstall';
 alias BU.RubyOnRails.Uninstall='BU.Software.Frameworks.RubyOnRails.Uninstall';
 
 ## ----------------------------------------------
