--- a/install/.Bash-utils/config/modules/Software/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Software/Aliases.conf
@@ -44,8 +44,19 @@
 ## SUB-CATEGORY : "BOOTSTRAP"
 
 alias BU.Bootstrap.Install='BU.Software.Frameworks.Bootstrap.Install';
+alias BU.Bootstrap.Install.Linux='BU.Software.Linux.Frameworks.Bootstrap.Install';
+alias BU.Bootstrap.Install.OSX='BU.Software.OSX.Frameworks.Bootstrap.Install';
+alias BU.Bootstrap.Install.Windows='BU.Software.Windows.Frameworks.Bootstrap.Install';
+
 alias BU.Bootstrap.Update='BU.Software.Frameworks.Bootstrap.Update';
+alias BU.Bootstrap.Update.Linux='BU.Software.Linux.Frameworks.Bootstrap.Update';
+alias BU.Bootstrap.Update.OSX='BU.Software.OSX.Frameworks.Bootstrap.Update';
+alias BU.Bootstrap.Update.Windows='BU.Software.Windows.Frameworks.Bootstrap.Update';
+
 alias BU.Bootstrap.Uninstall='BU.Software.Frameworks.Bootstrap.Uninstall';
+alias BU.Bootstrap.Uninstall.Linux='BU.Software.Linux.Frameworks.Bootstrap.Uninstall';
+alias BU.Bootstrap.Uninstall.OSX='BU.Software.OSX.Frameworks.Bootstrap.Uninstall';
+alias BU.Bootstrap.Uninstall.Windows='BU.Software.Windows.Frameworks.Bootstrap.Uninstall';
 
 ## ----------------------------------------------
 
@@ -77,8 +88,8 @@ alias BU.AngularJS.Uninstall.Windows='BU.Software.Windows.Frameworks.AngularJS.U
 ## SUB-CATEGORY : "REACT JS"
 
 alias BU.ReactJS.Install='BU.Software.Frameworks.ReactJS.Install';
-alias BU.ReactJS.Install.Linux='BU.Software.Frameworks.ReactJS.Install';
-alias BU.ReactJS.Install.OSX='BU.Software.Frameworks.ReactJS.Install';
+alias BU.ReactJS.Install.Linux='BU.Software.Linux.Frameworks.ReactJS.Install';
+alias BU.ReactJS.Install.OSX='BU.Software.OSX.Frameworks.ReactJS.Install';
 alias BU.ReactJS.Install.Windows='BU.Software.Windows.Frameworks.ReactJS.Install';
 
 alias BU.ReactJS.Update='BU.Software.Frameworks.ReactJS.Update';
@@ -87,8 +98,8 @@ alias BU.ReactJS.Update.OSX='BU.Software.OSX.Frameworks.ReactJS.Update';
 alias BU.ReactJS.Update.Windows='BU.Software.Windows.Frameworks.ReactJS.Update';
 
 alias BU.ReactJS.Uninstall='BU.Software.Frameworks.ReactJS.Uninstall';
-alias BU.ReactJS.Uninstall='BU.Software.Frameworks.ReactJS.Uninstall';
-alias BU.ReactJS.Uninstall='BU.Software.Frameworks.ReactJS.Uninstall';
+alias BU.ReactJS.Uninstall.Linux='BU.Software.Linux.Frameworks.ReactJS.Uninstall';
+alias BU.ReactJS.Uninstall.OSX='BU.Software.OSX.Frameworks.ReactJS.Uninstall';
 alias BU.ReactJS.Uninstall.Windows='BU.Software.Windows.Frameworks.ReactJS.Uninstall';
 
 ## ----------------------------------------------
@@ -96,18 +107,18 @@ alias BU.ReactJS.Uninstall.Windows='BU.Software.Windows.Frameworks.ReactJS.Unins
 ## SUB-CATEGORY : "VUE.JS"
 
 alias BU.VueJS.Install='BU.Software.Frameworks.VueJS.Install';
-alias BU.VueJS.Install='BU.Software.Frameworks.VueJS.Install';
-alias BU.VueJS.Install='BU.Software.Frameworks.VueJS.Install';
+alias BU.VueJS.Install.Linux='BU.Software.Linux.Frameworks.VueJS.Install';
+alias BU.VueJS.Install.OSX='BU.Software.OSX.Frameworks.VueJS.Install';
 alias BU.VueJS.Install.Windows='BU.Software.Windows.Frameworks.VueJS.Install';
 
 alias BU.VueJS.Update='BU.Software.Frameworks.VueJS.Update';
-alias BU.VueJS.Update='BU.Software.Frameworks.VueJS.Update';
-alias BU.VueJS.Update='BU.Software.Frameworks.VueJS.Update';
+alias BU.VueJS.Update.Linux='BU.Software.Linux.Frameworks.VueJS.Update';
+alias BU.VueJS.Update.OSX='BU.Software.OSX.Frameworks.VueJS.Update';
 alias BU.VueJS.Update.Windows='BU.Software.Windows.Frameworks.VueJS.Update';
 
 alias BU.VueJS.Uninstall='BU.Software.Frameworks.VueJS.Uninstall';
-alias BU.VueJS.Uninstall='BU.Software.Frameworks.VueJS.Uninstall';
-alias BU.VueJS.Uninstall='BU.Software.Frameworks.VueJS.Uninstall';
+alias BU.VueJS.Uninstall.Linux='BU.Software.Linux.Frameworks.VueJS.Uninstall';
+alias BU.VueJS.Uninstall.OSX='BU.Software.OSX.Frameworks.VueJS.Uninstall';
 alias BU.VueJS.Uninstall.Windows='BU.Software.Windows.Frameworks.VueJS.Uninstall';
 
 ## ----------------------------------------------
@@ -121,18 +132,18 @@ alias BU.VueJS.Uninstall.Windows='BU.Software.Windows.Frameworks.VueJS.Uninstall
 ## SUB-CATEGORY : "CAKE PHP"
 
 alias BU.CakePHP.Install='BU.Software.Frameworks.CakePHP.Install';
-alias BU.CakePHP.Install='BU.Software.Frameworks.CakePHP.Install';
-alias BU.CakePHP.Install='BU.Software.Frameworks.CakePHP.Install';
+alias BU.CakePHP.Install.Linux='BU.Software.Linux.Frameworks.CakePHP.Install';
+alias BU.CakePHP.Install.OSX='BU.Software.OSX.Frameworks.CakePHP.Install';
 alias BU.CakePHP.Install.Windows='BU.Software.Windows.Frameworks.CakePHP.Install';
 
 alias BU.CakePHP.Update='BU.Software.Frameworks.CakePHP.Update';
-alias BU.CakePHP.Update='BU.Software.Frameworks.CakePHP.Update';
-alias BU.CakePHP.Update='BU.Software.Frameworks.CakePHP.Update';
+alias BU.CakePHP.Update.Linux='BU.Software.Linux.Frameworks.CakePHP.Update';
+alias BU.CakePHP.Update.OSX='BU.Software.OSX.Frameworks.CakePHP.Update';
 alias BU.CakePHP.Update.Windows='BU.Software.Windows.Frameworks.CakePHP.Update';
 
 alias BU.CakePHP.Uninstall='BU.Software.Frameworks.CakePHP.Uninstall';
-alias BU.CakePHP.Uninstall='BU.Software.Frameworks.CakePHP.Uninstall';
-alias BU.CakePHP.Uninstall='BU.Software.Frameworks.CakePHP.Uninstall';
+alias BU.CakePHP.Uninstall.Linux='BU.Software.Linux.Frameworks.CakePHP.Uninstall';
+alias BU.CakePHP.Uninstall.OSX='BU.Software.OSX.Frameworks.CakePHP.Uninstall';
 alias BU.CakePHP.Uninstall.Windows='BU.Software.Windows.Frameworks.CakePHP.Uninstall';
 
 ## ----------------------------------------------
@@ -140,18 +151,18 @@ alias BU.CakePHP.Uninstall.Windows='BU.Software.Windows.Frameworks.CakePHP.Unins
 ## SUB-CATEGORY : "LARAVEL"
 
 alias BU.Laravel.Install='BU.Software.Frameworks.Laravel.Install';
-alias BU.Laravel.Install='BU.Software.Frameworks.Laravel.Install';
-alias BU.Laravel.Install='BU.Software.Frameworks.Laravel.Install';
+alias BU.Laravel.Install.Linux='BU.Software.Linux.Frameworks.Laravel.Install';
+alias BU.Laravel.Install.OSX='BU.Software.OSX.Frameworks.Laravel.Install';
 alias BU.Laravel.Install.Windows='BU.Software.Windows.Frameworks.Laravel.Install';
 
 alias BU.Laravel.Update='BU.Software.Frameworks.Laravel.Update';
-alias BU.Laravel.Update='BU.Software.Frameworks.Laravel.Update';
-alias BU.Laravel.Update='BU.Software.Frameworks.Laravel.Update';
+alias BU.Laravel.Update.Linux='BU.Software.Linux.Frameworks.Laravel.Update';
+alias BU.Laravel.Update.OSX='BU.Software.OSX.Frameworks.Laravel.Update';
 alias BU.Laravel.Update.Windows='BU.Software.Windows.Frameworks.Laravel.Update';
 
 alias BU.Laravel.Uninstall='BU.Software.Frameworks.Laravel.Uninstall';
-alias BU.Laravel.Uninstall='BU.Software.Frameworks.Laravel.Uninstall';
-alias BU.Laravel.Uninstall='BU.Software.Frameworks.Laravel.Uninstall';
+alias BU.Laravel.Uninstall.Linux='BU.Software.Linux.Frameworks.Laravel.Uninstall';
+alias BU.Laravel.Uninstall.OSX='BU.Software.OSX.Frameworks.Laravel.Uninstall';
 alias BU.Laravel.Uninstall.Windows='BU.Software.Windows.Frameworks.Laravel.Uninstall';
 
 ## ----------------------------------------------
@@ -159,18 +170,18 @@ alias BU.Laravel.Uninstall.Windows='BU.Software.Windows.Frameworks.Laravel.Unins
 ## SUB-CATEGORY : "SYMFONY"
 
 alias BU.Symfony.Install='BU.Software.Frameworks.Symfony.Install';
-alias BU.Symfony.Install='BU.Software.Frameworks.Symfony.Install';
-alias BU.Symfony.Install='BU.Software.Frameworks.Symfony.Install';
+alias BU.Symfony.Install.Linux='BU.Software.Linux.Frameworks.Symfony.Install';
+alias BU.Symfony.Install.OSX='BU.Software.OSX.Frameworks.Symfony.Install';
 alias BU.Symfony.Install.Windows='BU.Software.Windows.Frameworks.Symfony.Install';
 
 alias BU.Symfony.Update='BU.Software.Frameworks.Symfony.Update';
-alias BU.Symfony.Update='BU.Software.Frameworks.Symfony.Update';
-alias BU.Symfony.Update='BU.Software.Frameworks.Symfony.Update';
+alias BU.Symfony.Update.Linux='BU.Software.Linux.Frameworks.Symfony.Update';
+alias BU.Symfony.Update.OSX='BU.Software.OSX.Frameworks.Symfony.Update';
 alias BU.Symfony.Update.Windows='BU.Software.Windows.Frameworks.Symfony.Update';
 
 alias BU.Symfony.Uninstall='BU.Software.Frameworks.Symfony.Uninstall';
-alias BU.Symfony.Uninstall='BU.Software.Frameworks.Symfony.Uninstall';
-alias BU.Symfony.Uninstall='BU.Software.Frameworks.Symfony.Uninstall';
+alias BU.Symfony.Uninstall.Linux='BU.Software.Linux.Frameworks.Symfony.Uninstall';
+alias BU.Symfony.Uninstall.OSX='BU.Software.OSX.Frameworks.Symfony.Uninstall';
 alias BU.Symfony.Uninstall.Windows='BU.Software.Windows.Frameworks.Symfony.Uninstall';
 
 ## ----------------------------------------------
@@ -184,57 +195,57 @@ alias BU.Symfony.Uninstall.Windows='BU.Software.Windows.Frameworks.Symfony.Unins
 ## SUB-CATEGORY : "DJANGO"
 
 alias BU.Django.Install='BU.Software.Frameworks.Django.Install';
-alias BU.Django.Install='BU.Software.Frameworks.Django.Install';
-alias BU.Django.Install='BU.Software.Frameworks.Django.Install';
-alias BU.Django.Install='BU.Software.Frameworks.Django.Install';
+alias BU.Django.Install.Linux='BU.Software.Linux.Frameworks.Django.Install';
+alias BU.Django.Install.OSX='BU.Software.OSX.Frameworks.Django.Install';
+alias BU.Django.Install.Windows='BU.Software.Windows.Frameworks.Django.Install';
 
 alias BU.Django.Update='BU.Software.Frameworks.Django.Update';
-alias BU.Django.Update='BU.Software.Frameworks.Django.Update';
-alias BU.Django.Update='BU.Software.Frameworks.Django.Update';
-alias BU.Django.Update='BU.Software.Frameworks.Django.Update';
+alias BU.Django.Update.Linux='BU.Software.Linux.Frameworks.Django.Update';
+alias BU.Django.Update.OSX='BU.Software.OSX.Frameworks.Django.Update';
+alias BU.Django.Update.Windows='BU.Software.Windows.Frameworks.Django.Update';
 
 alias BU.Django.Uninstall='BU.Software.Frameworks.Django.Uninstall';
-alias BU.Django.Uninstall='BU.Software.Frameworks.Django.Uninstall';
-alias BU.Django.Uninstall='BU.Software.Frameworks.Django.Uninstall';
-alias BU.Django.Uninstall='BU.Software.Frameworks.Django.Uninstall';
+alias BU.Django.Uninstall.Linux='BU.Software.Linux.Frameworks.Django.Uninstall';
+alias BU.Django.Uninstall.OSX='BU.Software.OSX.Frameworks.Django.Uninstall';
+alias BU.Django.Uninstall.Windows='BU.Software.Windows.Frameworks.Django.Uninstall';
 
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "FLASK"
 
 alias BU.Flask.Install='BU.Software.Frameworks.Flask.Install';
-alias BU.Flask.Install='BU.Software.Frameworks.Flask.Install';
-alias BU.Flask.Install='BU.Software.Frameworks.Flask.Install';
-alias BU.Flask.Install='BU.Software.Frameworks.Flask.Install';
+alias BU.Flask.Install.Linux='BU.Software.Linux.Frameworks.Flask.Install';
+alias BU.Flask.Install.OSX='BU.Software.OSX.Frameworks.Flask.Install';
+alias BU.Flask.Install.Windows='BU.Software.Windows.Frameworks.Windows.Flask.Install';
 
 alias BU.Flask.Update='BU.Software.Frameworks.Flask.Update';
-alias BU.Flask.Update='BU.Software.Frameworks.Flask.Update';
-alias BU.Flask.Update='BU.Software.Frameworks.Flask.Update';
-alias BU.Flask.Update='BU.Software.Frameworks.Flask.Update';
+alias BU.Flask.Update.Linux='BU.Software.Linux.Frameworks.Flask.Update';
+alias BU.Flask.Update.OSX='BU.Software.OSX.Frameworks.Flask.Update';
+alias BU.Flask.Update.Windows='BU.Software.Windows.Frameworks.Flask.Update';
 
 alias BU.Flask.Uninstall='BU.Software.Frameworks.Flask.Uninstall';
-alias BU.Flask.Uninstall='BU.Software.Frameworks.Flask.Uninstall';
-alias BU.Flask.Uninstall='BU.Software.Frameworks.Flask.Uninstall';
-alias BU.Flask.Uninstall='BU.Software.Frameworks.Flask.Uninstall';
+alias BU.Flask.Uninstall.Linux='BU.Software.Linux.Frameworks.Flask.Uninstall';
+alias BU.Flask.Uninstall.OSX='BU.Software.OSX.Windows.Frameworks.Flask.Uninstall';
+alias BU.Flask.Uninstall.Windows='BU.Software.Windows.Frameworks.Flask.Uninstall';
 
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "WEB2PY"
 
 alias BU.Web2py.Install='BU.Software.Frameworks.Web2py.Install';
-alias BU.Web2py.Install='BU.Software.Frameworks.Web2py.Install';
-alias BU.Web2py.Install='BU.Software.Frameworks.Web2py.Install';
-alias BU.Web2py.Install='BU.Software.Frameworks.Web2py.Install';
+alias BU.Web2py.Install.Linux='BU.Software.Linux.Frameworks.Web2py.Install';
+alias BU.Web2py.Install.OSX='BU.Software.OSX.Frameworks.Web2py.Install';
+alias BU.Web2py.Install.Windows='BU.Software.Windows.Frameworks.Web2py.Install';
 
 alias BU.Web2py.Update='BU.Software.Frameworks.Web2py.Update';
-alias BU.Web2py.Update='BU.Software.Frameworks.Web2py.Update';
-alias BU.Web2py.Update='BU.Software.Frameworks.Web2py.Update';
-alias BU.Web2py.Update='BU.Software.Frameworks.Web2py.Update';
+alias BU.Web2py.Update.Linux='BU.Software.Linux.Frameworks.Web2py.Update';
+alias BU.Web2py.Update.OSX='BU.Software.OSX.Frameworks.Web2py.Update';
+alias BU.Web2py.Update.Windows='BU.Software.Windows.Frameworks.Web2py.Update';
 
 alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
-alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
-alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
-alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
+alias BU.Web2py.Uninstall.Linux='BU.Software.Linux.Frameworks.Web2py.Uninstall';
+alias BU.Web2py.Uninstall.OSX='BU.Software.OSX.Frameworks.Web2py.Uninstall';
+alias BU.Web2py.Uninstall.Windows='BU.Software.Windows.Frameworks.Web2py.Uninstall';
 
 ## ----------------------------------------------
 
@@ -247,19 +258,19 @@ alias BU.Web2py.Uninstall='BU.Software.Frameworks.Web2py.Uninstall';
 ## SUB-CATEGORY : "RUBY ON RAILS"
 
 alias BU.RubyOnRails.Install='BU.Software.Frameworks.RubyOnRails.Install';
-alias BU.RubyOnRails.Install='BU.Software.Frameworks.RubyOnRails.Install';
-alias BU.RubyOnRails.Install='BU.Software.Frameworks.RubyOnRails.Install';
-alias BU.RubyOnRails.Install='BU.Software.Frameworks.RubyOnRails.Install';
+alias BU.RubyOnRails.Install.Linux='BU.Software.Linux.Frameworks.RubyOnRails.Install';
+alias BU.RubyOnRails.Install.OSX='BU.Software.OSX.Frameworks.RubyOnRails.Install';
+alias BU.RubyOnRails.Install.Windows='BU.Software.Windows.Frameworks.RubyOnRails.Install';
 
 alias BU.RubyOnRails.Update='BU.Software.Frameworks.RubyOnRails.Update';
-alias BU.RubyOnRails.Update='BU.Software.Frameworks.RubyOnRails.Update';
-alias BU.RubyOnRails.Update='BU.Software.Frameworks.RubyOnRails.Update';
-alias BU.RubyOnRails.Update='BU.Software.Frameworks.RubyOnRails.Update';
+alias BU.RubyOnRails.Update.Linux='BU.Software.Linux.Frameworks.RubyOnRails.Update';
+alias BU.RubyOnRails.Update.OSX='BU.Software.OSX.Frameworks.RubyOnRails.Update';
+alias BU.RubyOnRails.Update.Windows='BU.Software.Windows.Frameworks.RubyOnRails.Update';
 
 alias BU.RubyOnRails.Uninstall='BU.Software.Frameworks.RubyOnRails.Uninstall';
-alias BU.RubyOnRails.Uninstall='BU.Software.Frameworks.RubyOnRails.Uninstall';
-alias BU.RubyOnRails.Uninstall='BU.Software.Frameworks.RubyOnRails.Uninstall';
-alias BU.RubyOnRails.Uninstall='BU.Software.Frameworks.RubyOnRails.Uninstall';
+alias BU.RubyOnRails.Uninstall.Linux='BU.Software.Linux.Frameworks.RubyOnRails.Uninstall';
+alias BU.RubyOnRails.Uninstall.OSX='BU.Software.OSX.Frameworks.RubyOnRails.Uninstall';
+alias BU.RubyOnRails.Uninstall.Windows='BU.Software.Windows.Frameworks.RubyOnRails.Uninstall';
 
 ## ----------------------------------------------
 
