Filling the "Aliases.conf" file from the "Software" module

--- a/install/.Bash-utils/config/modules/Software/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Software/Aliases.conf
@@ -282,9 +282,39 @@ alias BU.RubyOnRails.Uninstall.Windows='BU.Software.Windows.Frameworks.RubyOnRai
 
 ##################################### DEFINING ALIASES - GAMES ####################################
 
-#### CATEGORY : ""
+#### CATEGORY : "STEAM GAMES"
 
-## SUB-CATEGORY : ""
+## SUB-CATEGORY : "CLI DEPENDENCIES"
+
+alias BU.SteamCMD.Install='BU.Software.Games.SteamCMD.Install';
+alias BU.SteamCMD.Install.Linux='BU.Software.Linux.Games.SteamCMD.Install';
+alias BU.SteamCMD.Install.OSX='BU.Software.OSX.Games.SteamCMD.Install';
+alias BU.SteamCMD.Install.Windows='BU.Software.Windows.Games.SteamCMD.Install';
+
+alias BU.SteamCMD.IsInstalled='BU.Software.Games.SteamCMD.IsInstalled';
+alias BU.SteamCMD.IsInstalled.Linux='BU.Software.Linux.Games.SteamCMD.IsInstalled';
+alias BU.SteamCMD.IsInstalled.OSX='BU.Software.OSX.Games.SteamCMD.IsInstalled';
+alias BU.SteamCMD.IsInstalled.Windows='BU.Software.Windows.Games.SteamCMD.IsInstalled';
+
+alias BU.SteamCMD.Update='BU.Software.Games.SteamCMD.Update';
+alias BU.SteamCMD.Update.Linux='BU.Software.Linux.Games.SteamCMD.Update';
+alias BU.SteamCMD.Update.OSX='BU.Software.OSX.Games.SteamCMD.Update';
+alias BU.SteamCMD.Update.Windows='BU.Software.Windows.Games.SteamCMD.Update';
+
+alias BU.SteamCMD.Uninstall='BU.Software.Games.SteamCMD.Uninstall';
+alias BU.SteamCMD.Uninstall.Linux='BU.Software.Linux.Games.SteamCMD.Uninstall';
+alias BU.SteamCMD.Uninstall.OSX='BU.Software.OSX.Games.SteamCMD.Uninstall';
+alias BU.SteamCMD.Uninstall.Windows='BU.Software.Windows.Games.SteamCMD.Uninstall';
+
+## ----------------------------------------------
+
+## SUB-CATEGORY : "STEAMCMD"
+
+alias BU.SteamCMD.Login='BU.Software.Games.SteamCMD.Login';
+alias BU.SteamCMD.DownloadGame='BU.Software.Games.SteamCMD.DownloadGame';
+alias BU.SteamCMD.ValidateFiles='BU.Software.Games.SteamCMD.ValidateFiles';
+alias BU.SteamCMD.AddProductKey='BU.Software.Games.SteamCMD.AddProductKey';
+alias BU.SteamCMD.UninstallGame='BU.Software.Games.SteamCMD.UninstallGame';
 
 ## ----------------------------------------------
 
