Filling the "Software" module's aliases configuration file

--- a/install/.Bash-utils/config/modules/Software/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Software/Aliases.conf
@@ -354,6 +354,58 @@ alias BU.SteamCMD.UninstallGame='BU.Software.Games.SteamCMD.UninstallGame';
 
 ## SUB-CATEGORY : "NPM"
 
+alias BU.NPM.Install='BU.Software.PackageManagers.NPM.Install';
+alias BU.NPM.IsInstalled='BU.Software.PackageManagers.NPM.IsInstalled';
+alias BU.NPM.Update='BU.Software.PackageManagers.NPM.Update';
+alias BU.NPM.UpdateCache='BU.Software.PackageManagers.NPM.UpdateCache';
+alias BU.NPM.Downgrade='BU.Software.PackageManagers.NPM.Downgrade';
+alias BU.NPM.Uninstall='BU.Software.PackageManagers.NPM.Uninstall';
+alias BU.NPM.CheckPackageFromDatabase='BU.Software.PackageManagers.NPM.CheckPackageFromDatabase';
+alias BU.NPM.DownloadPackage='BU.Software.PackageManagers.NPM.DownloadPackage';
+alias BU.NPM.UpgradePackage='BU.Software.PackageManagers.NPM.UpgradePackage';
+alias BU.NPM.UpgradePackages='BU.Software.PackageManagers.NPM.UpgradePackages';
+alias BU.NPM.DowngradePackage='BU.Software.PackageManagers.NPM.DowngradePackage';
+alias BU.NPM.RemovePackage='BU.Software.PackageManagers.NPM.RemovePackage';
+
+alias BU.NPM.Install.Linux='BU.Software.Linux.PackageManagers.NPM.Install';
+alias BU.NPM.IsInstalled.Linux='BU.Software.Linux.PackageManagers.NPM.IsInstalled';
+alias BU.NPM.Update.Linux='BU.Software.Linux.PackageManagers.NPM.Update';
+alias BU.NPM.UpdateCache.Linux='BU.Software.Linux.PackageManagers.NPM.UpdateCache';
+alias BU.NPM.Downgrade.Linux='BU.Software.Linux.PackageManagers.NPM.Downgrade';
+alias BU.NPM.Uninstall.Linux='BU.Software.Linux.PackageManagers.NPM.Uninstall';
+alias BU.NPM.CheckPackageFromDatabase.Linux='BU.Software.Linux.PackageManagers.NPM.CheckPackageFromDatabase';
+alias BU.NPM.DownloadPackage.Linux='BU.Software.Linux.PackageManagers.NPM.DownloadPackage';
+alias BU.NPM.UpgradePackage.Linux='BU.Software.Linux.PackageManagers.NPM.UpgradePackage';
+alias BU.NPM.UpgradePackages.Linux='BU.Software.Linux.PackageManagers.NPM.UpgradePackages';
+alias BU.NPM.DowngradePackage.Linux='BU.Software.Linux.PackageManagers.NPM.DowngradePackage';
+alias BU.NPM.RemovePackage.Linux='BU.Software.Linux.PackageManagers.NPM.RemovePackage';
+
+alias BU.NPM.Install.OSX='BU.Software.OSX.PackageManagers.NPM.Install';
+alias BU.NPM.IsInstalled.OSX='BU.Software.OSX.PackageManagers.NPM.IsInstalled';
+alias BU.NPM.Update.OSX='BU.Software.OSX.PackageManagers.NPM.Update';
+alias BU.NPM.UpdateCache.OSX='BU.Software.OSX.PackageManagers.NPM.UpdateCache';
+alias BU.NPM.Downgrade.OSX='BU.Software.OSX.PackageManagers.NPM.Downgrade';
+alias BU.NPM.Uninstall.OSX='BU.Software.OSX.PackageManagers.NPM.Uninstall';
+alias BU.NPM.CheckPackageFromDatabase.OSX='BU.Software.OSX.PackageManagers.NPM.CheckPackageFromDatabase';
+alias BU.NPM.DownloadPackage.OSX='BU.Software.OSX.PackageManagers.NPM.DownloadPackage';
+alias BU.NPM.UpgradePackage.OSX='BU.Software.OSX.PackageManagers.NPM.UpgradePackage';
+alias BU.NPM.UpgradePackages.OSX='BU.Software.OSX.PackageManagers.NPM.UpgradePackages';
+alias BU.NPM.DowngradePackage.OSX='BU.Software.OSX.PackageManagers.NPM.DowngradePackage';
+alias BU.NPM.RemovePackage.OSX='BU.Software.OSX.PackageManagers.NPM.RemovePackage';
+
+alias BU.NPM.Install.Windows='BU.Software.Windows.PackageManagers.NPM.Install';
+alias BU.NPM.IsInstalled.Windows='BU.Software.Windows.PackageManagers.NPM.IsInstalled';
+alias BU.NPM.Update.Windows='BU.Software.Windows.PackageManagers.NPM.Update';
+alias BU.NPM.UpdateCache.Windows='BU.Software.Windows.PackageManagers.NPM.UpdateCache';
+alias BU.NPM.Downgrade.Windows='BU.Software.Windows.PackageManagers.NPM.Downgrade';
+alias BU.NPM.Uninstall.Windows='BU.Software.Windows.PackageManagers.NPM.Uninstall';
+alias BU.NPM.CheckPackageFromDatabase.Windows='BU.Software.Windows.PackageManagers.NPM.CheckPackageFromDatabase';
+alias BU.NPM.DownloadPackage.Windows='BU.Software.Windows.PackageManagers.NPM.DownloadPackage';
+alias BU.NPM.UpgradePackage.Windows='BU.Software.Windows.PackageManagers.NPM.UpgradePackage';
+alias BU.NPM.UpgradePackages.Windows='BU.Software.Windows.PackageManagers.NPM.UpgradePackages';
+alias BU.NPM.DowngradePackage.Windows='BU.Software.Windows.PackageManagers.NPM.DowngradePackage';
+alias BU.NPM.RemovePackage.Windows='BU.Software.Windows.PackageManagers.NPM.RemovePackage';
+
 ## ----------------------------------------------
 
 
@@ -364,13 +416,55 @@ alias BU.SteamCMD.UninstallGame='BU.Software.Games.SteamCMD.UninstallGame';
 
 ## SUB-CATEGORY : "CHOCOLATEY"
 
+alias BU.Chocolatey.Install='BU.Software.Windows.PackageManagers.Chocolatey.Install';
+alias BU.Chocolatey.IsInstalled='BU.Software.Windows.PackageManagers.Chocolatey.IsInstalled';
+alias BU.Chocolatey.Update='BU.Software.Windows.PackageManagers.Chocolatey.Update';
+alias BU.Chocolatey.UpdateCache='BU.Software.Windows.PackageManagers.Chocolatey.UpdateCache';
+alias BU.Chocolatey.Downgrade='BU.Software.Windows.PackageManagers.Chocolatey.Downgrade';
+alias BU.Chocolatey.Uninstall='BU.Software.Windows.PackageManagers.Chocolatey.Uninstall';
+alias BU.Chocolatey.CheckPackageFromDatabase='BU.Software.Windows.PackageManagers.Chocolatey.CheckPackageFromDatabase';
+alias BU.Chocolatey.DownloadPackage='BU.Software.Windows.PackageManagers.Chocolatey.DownloadPackage';
+alias BU.Chocolatey.UpgradePackage='BU.Software.Windows.PackageManagers.Chocolatey.UpgradePackage';
+alias BU.Chocolatey.UpgradePackages='BU.Software.Windows.PackageManagers.Chocolatey.UpgradePackages';
+alias BU.Chocolatey.DowngradePackage='BU.Software.Windows.PackageManagers.Chocolatey.DowngradePackage';
+alias BU.Chocolatey.RemovePackage='BU.Software.Windows.PackageManagers.Chocolatey.RemovePackage';
+alias BU.Chocolatey.Autoremove='BU.Software.Windows.PackageManagers.Chocolatey.Autoremove';
+
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "HOMEBREW"
 
+alias BU.Homebrew.Install='BU.Software.OSX.PackageManagers.Homebrew.Install';
+alias BU.Homebrew.IsInstalled='BU.Software.OSX.PackageManagers.Homebrew.IsInstalled';
+alias BU.Homebrew.Update='BU.Software.OSX.PackageManagers.Homebrew.Update';
+alias BU.Homebrew.UpdateCache='BU.Software.OSX.PackageManagers.Homebrew.UpdateCache';
+alias BU.Homebrew.Downgrade='BU.Software.OSX.PackageManagers.Homebrew.Downgrade';
+alias BU.Homebrew.Uninstall='BU.Software.OSX.PackageManagers.Homebrew.Uninstall';
+alias BU.Homebrew.CheckPackageFromDatabase='BU.Software.OSX.PackageManagers.Homebrew.CheckPackageFromDatabase';
+alias BU.Homebrew.DownloadPackage='BU.Software.OSX.PackageManagers.Homebrew.DownloadPackage';
+alias BU.Homebrew.UpgradePackage='BU.Software.OSX.PackageManagers.Homebrew.UpgradePackage';
+alias BU.Homebrew.UpgradePackages='BU.Software.OSX.PackageManagers.Homebrew.UpgradePackages';
+alias BU.Homebrew.DowngradePackage='BU.Software.OSX.PackageManagers.Homebrew.DowngradePackage';
+alias BU.Homebrew.RemovePackage='BU.Software.OSX.PackageManagers.Homebrew.RemovePackage';
+alias BU.Homebrew.Autoremove='BU.Software.OSX.PackageManagers.Homebrew.Autoremove';
+
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "SNAP"
+
+alias BU.Snap.Install='BU.Software.Linux.PackageManagers.Snap.Install';
+alias BU.Snap.IsInstalled='BU.Software.Linux.PackageManagers.Snap.IsInstalled';
+alias BU.Snap.Update='BU.Software.Linux.PackageManagers.Snap.Update';
+alias BU.Snap.UpdateCache='BU.Software.Linux.PackageManagers.Snap.UpdateCache';
+alias BU.Snap.Downgrade='BU.Software.Linux.PackageManagers.Snap.Downgrade';
+alias BU.Snap.Uninstall='BU.Software.Linux.PackageManagers.Snap.Uninstall';
+alias BU.Snap.CheckPackageFromDatabase='BU.Software.Linux.PackageManagers.Snap.CheckPackageFromDatabase';
+alias BU.Snap.DownloadPackage='BU.Software.Linux.PackageManagers.Snap.DownloadPackage';
+alias BU.Snap.UpgradePackage='BU.Software.Linux.PackageManagers.Snap.UpgradePackage';
+alias BU.Snap.UpgradePackages='BU.Software.Linux.PackageManagers.Snap.UpgradePackages';
+alias BU.Snap.DowngradePackage='BU.Software.Linux.PackageManagers.Snap.DowngradePackage';
+alias BU.Snap.RemovePackage='BU.Software.Linux.PackageManagers.Snap.RemovePackage';
+alias BU.Snap.Autoremove='BU.Software.Linux.PackageManagers.Snap.Autoremove';
 
 ## ----------------------------------------------
 
