--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -123,9 +123,37 @@
 
 ################################## DEFINING ALIASES - MOTHERBOARD #################################
 
-#### CATEGORY : ""
+#### CATEGORY : "BIOS INFORMATIONS"
 
-## SUB-CATEGORY : ""
+## SUB-CATEGORY : "GETTING BIOS INFORMATIONS"
+
+alias BU.MBIsACPISupported='BU.Hardware.Motherboard.IsACPISupported';
+alias BU.MBIsACPISupported.Android='BU.Hardware.Android.Motherboard.IsACPISupported';
+alias BU.MBIsACPISupported.BSD='BU.Hardware.BSD.Motherboard.IsACPISupported';
+alias BU.MBIsACPISupported.Haiku='BU.Hardware.Haiku.Motherboard.IsACPISupported';
+alias BU.MBIsACPISupported.Linux='BU.Hardware.Linux.Motherboard.IsACPISupported';
+alias BU.MBIsACPISupported.OSX='BU.Hardware.OSX.Motherboard.IsACPISupported';
+alias BU.MBIsACPISupported.Windows='BU.Hardware.Windows.Motherboard.IsACPISupported';
+
+alias BU.MBIsBIOSUpgradeable='BU.Hardware.Motherboard.IsBIOSUpgradeable';
+alias BU.MBIsBIOSUpgradeable.Android='BU.Hardware.Android.Motherboard.IsBIOSUpgradeable';
+alias BU.MBIsBIOSUpgradeable.BSD='BU.Hardware.BSD.Motherboard.IsBIOSUpgradeable';
+alias BU.MBIsBIOSUpgradeable.Haiku='BU.Hardware.Haiku.Motherboard.IsBIOSUpgradeable';
+alias BU.MBIsBIOSUpgradeable.Linux='BU.Hardware.Linux.Motherboard.IsBIOSUpgradeable';
+alias BU.MBIsBIOSUpgradeable.OSX='BU.Hardware.OSX.Motherboard.IsBIOSUpgradeable';
+alias BU.MBIsBIOSUpgradeable.Windows='BU.Hardware.Windows.Motherboard.IsBIOSUpgradeable';
+
+alias BU.MBIsBIOSShadowingSupported='BU.Hardware.Motherboard.IsBIOSShadowingSupported';
+alias BU.MBIsBIOSShadowingSupported.Android='BU.Hardware.Android.Motherboard.IsBIOSShadowingSupported';
+alias BU.MBIsBIOSShadowingSupported.BSD='BU.Hardware.BSD.Motherboard.IsBIOSShadowingSupported';
+alias BU.MBIsBIOSShadowingSupported.Haiku='BU.Hardware.Haiku.Motherboard.IsBIOSShadowingSupported';
+alias BU.MBIsBIOSShadowingSupported.Linux='BU.Hardware.Linux.Motherboard.IsBIOSShadowingSupported';
+alias BU.MBIsBIOSShadowingSupported.OSX='BU.Hardware.OSX.Motherboard.IsBIOSShadowingSupported';
+alias BU.MBIsBIOSShadowingSupported.Windows='BU.Hardware.Windows.Motherboard.IsBIOSShadowingSupported';
+
+alias BU.MBIsPCISupported='BU.Hardware.Motherboard.IsPCISupported';
+
+alias BU.MBIsUSBLegacySupported='BU.Hardware.Motherboard.IsUSBLegacySupported';
 
 ## ----------------------------------------------
 
