--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -152,8 +152,48 @@ alias BU.MBIsBIOSShadowingSupported.OSX='BU.Hardware.OSX.Motherboard.IsBIOSShado
 alias BU.MBIsBIOSShadowingSupported.Windows='BU.Hardware.Windows.Motherboard.IsBIOSShadowingSupported';
 
 alias BU.MBIsPCISupported='BU.Hardware.Motherboard.IsPCISupported';
+alias BU.MBIsPCISupported.Android='BU.Hardware.Android.Motherboard.IsPCISupported';
+alias BU.MBIsPCISupported.BSD='BU.Hardware.BSD.Motherboard.IsPCISupported';
+alias BU.MBIsPCISupported.Haiku='BU.Hardware.Haiku.Motherboard.IsPCISupported';
+alias BU.MBIsPCISupported.Linux='BU.Hardware.Linux.Motherboard.IsPCISupported';
+alias BU.MBIsPCISupported.OSX='BU.Hardware.OSX.Motherboard.IsPCISupported';
+alias BU.MBIsPCISupported.Windows='BU.Hardware.Windows.Motherboard.IsPCISupported';
 
 alias BU.MBIsUSBLegacySupported='BU.Hardware.Motherboard.IsUSBLegacySupported';
+alias BU.MBIsUSBLegacySupported.Android='BU.Hardware.Android.Motherboard.IsUSBLegacySupported';
+alias BU.MBIsUSBLegacySupported.BSD='BU.Hardware.BSD.Motherboard.IsUSBLegacySupported';
+alias BU.MBIsUSBLegacySupported.Haiku='BU.Hardware.Haiku.Motherboard.IsUSBLegacySupported';
+alias BU.MBIsUSBLegacySupported.Linux='BU.Hardware.Linux.Motherboard.IsUSBLegacySupported';
+alias BU.MBIsUSBLegacySupported.OSX='BU.Hardware.OSX.Motherboard.IsUSBLegacySupported';
+alias BU.MBIsUSBLegacySupported.Windows='BU.Hardware.Windows.Motherboard.IsUSBLegacySupported';
+
+## ----------------------------------------------
+
+## SUB-CATEGORY : "GETTING BIOS INFORMATIONS"
+
+alias BU='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+
+alias BU='BU.Hardware.Motherboard.GetFirmwareVersion';
+
+alias BU='BU.Hardware.Motherboard.GetROMSize';
+
+alias BU='BU.Hardware.Motherboard.GetRuntimeSize';
+
+alias BU='BU.Hardware.Motherboard.GetVendor';
+
+## ----------------------------------------------
+
+## SUB-CATEGORY : "GETTING BIOS LANGUAGE INFORMATIONS"
+
+alias BU='BU.Hardware.Motherboard.GetLanguageDescriptionFormat';
+
+alias BU='BU.Hardware.Motherboard.GetInstallableLanguagesNumber';
+
+alias BU='';
+
+alias BU='';
+
+alias BU='';
 
 ## ----------------------------------------------
 
