--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -171,7 +171,7 @@ alias BU.MBIsUSBLegacySupported.Windows='BU.Hardware.Windows.Motherboard.IsUSBLe
 
 ## SUB-CATEGORY : "GETTING BIOS INFORMATIONS"
 
-alias BU='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGet='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
 
 alias BU='BU.Hardware.Motherboard.GetFirmwareVersion';
 
@@ -189,11 +189,9 @@ alias BU='BU.Hardware.Motherboard.GetLanguageDescriptionFormat';
 
 alias BU='BU.Hardware.Motherboard.GetInstallableLanguagesNumber';
 
-alias BU='';
+alias BU='BU.Hardware.Motherboard.GetInstallableLanguagesList';
 
-alias BU='';
-
-alias BU='';
+alias BU='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
 
 ## ----------------------------------------------
 
