--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -171,27 +171,57 @@ alias BU.MBIsUSBLegacySupported.Windows='BU.Hardware.Windows.Motherboard.IsUSBLe
 
 ## SUB-CATEGORY : "GETTING BIOS INFORMATIONS"
 
-alias BU.MBGet='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.Android='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.BSD='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.Haiku='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.Linux='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.OSX='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.Windows='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
 
-alias BU='BU.Hardware.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion='BU.Hardware.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.Android='BU.Hardware.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.BSD='BU.Hardware.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.Haiku='BU.Hardware.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.Linux='BU.Hardware.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.OSX='BU.Hardware.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.Windows='BU.Hardware.Motherboard.GetFirmwareVersion';
 
-alias BU='BU.Hardware.Motherboard.GetROMSize';
+alias BU.MBGetROMSize='BU.Hardware.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.Android='BU.Hardware.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.BSD='BU.Hardware.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.Haiku='BU.Hardware.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.Linux='BU.Hardware.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.OSX='BU.Hardware.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.Windows='BU.Hardware.Motherboard.GetROMSize';
 
-alias BU='BU.Hardware.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize='BU.Hardware.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.Android='BU.Hardware.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.BSD='BU.Hardware.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.Haiku='BU.Hardware.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.Linux='BU.Hardware.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.OSX='BU.Hardware.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.Windows='BU.Hardware.Motherboard.GetRuntimeSize';
 
-alias BU='BU.Hardware.Motherboard.GetVendor';
+alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
+alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
+alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
+alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
+alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
+alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
+alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
 
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "GETTING BIOS LANGUAGE INFORMATIONS"
 
-alias BU='BU.Hardware.Motherboard.GetLanguageDescriptionFormat';
+alias BU.MBGetLangDescFmt='BU.Hardware.Motherboard.GetLanguageDescriptionFormat';
 
-alias BU='BU.Hardware.Motherboard.GetInstallableLanguagesNumber';
+alias BU.MBGetInstallableLangNB='BU.Hardware.Motherboard.GetInstallableLanguagesNumber';
 
-alias BU='BU.Hardware.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList='BU.Hardware.Motherboard.GetInstallableLanguagesList';
 
-alias BU='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
 
 ## ----------------------------------------------
 
