--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -172,44 +172,44 @@ alias BU.MBIsUSBLegacySupported.Windows='BU.Hardware.Windows.Motherboard.IsUSBLe
 ## SUB-CATEGORY : "GETTING BIOS INFORMATIONS"
 
 alias BU.MBGetFirmwareReleaseDate='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
-alias BU.MBGetFirmwareReleaseDate.Android='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
-alias BU.MBGetFirmwareReleaseDate.BSD='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
-alias BU.MBGetFirmwareReleaseDate.Haiku='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
-alias BU.MBGetFirmwareReleaseDate.Linux='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
-alias BU.MBGetFirmwareReleaseDate.OSX='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
-alias BU.MBGetFirmwareReleaseDate.Windows='BU.Hardware.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.Android='BU.Hardware.Android.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.BSD='BU.Hardware.BSD.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.Haiku='BU.Hardware.Haiku.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.Linux='BU.Hardware.Linux.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.OSX='BU.Hardware.OSX.Motherboard.GetFirmwareReleaseDate';
+alias BU.MBGetFirmwareReleaseDate.Windows='BU.Hardware.Windows.Motherboard.GetFirmwareReleaseDate';
 
 alias BU.MBGetFirmwareVersion='BU.Hardware.Motherboard.GetFirmwareVersion';
-alias BU.MBGetFirmwareVersion.Android='BU.Hardware.Motherboard.GetFirmwareVersion';
-alias BU.MBGetFirmwareVersion.BSD='BU.Hardware.Motherboard.GetFirmwareVersion';
-alias BU.MBGetFirmwareVersion.Haiku='BU.Hardware.Motherboard.GetFirmwareVersion';
-alias BU.MBGetFirmwareVersion.Linux='BU.Hardware.Motherboard.GetFirmwareVersion';
-alias BU.MBGetFirmwareVersion.OSX='BU.Hardware.Motherboard.GetFirmwareVersion';
-alias BU.MBGetFirmwareVersion.Windows='BU.Hardware.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.Android='BU.Hardware.Android.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.BSD='BU.Hardware.BSD.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.Haiku='BU.Hardware.Haiku.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.Linux='BU.Hardware.Linux.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.OSX='BU.Hardware.OSX.Motherboard.GetFirmwareVersion';
+alias BU.MBGetFirmwareVersion.Windows='BU.Hardware.Windows.Motherboard.GetFirmwareVersion';
 
 alias BU.MBGetROMSize='BU.Hardware.Motherboard.GetROMSize';
-alias BU.MBGetROMSize.Android='BU.Hardware.Motherboard.GetROMSize';
-alias BU.MBGetROMSize.BSD='BU.Hardware.Motherboard.GetROMSize';
-alias BU.MBGetROMSize.Haiku='BU.Hardware.Motherboard.GetROMSize';
-alias BU.MBGetROMSize.Linux='BU.Hardware.Motherboard.GetROMSize';
-alias BU.MBGetROMSize.OSX='BU.Hardware.Motherboard.GetROMSize';
-alias BU.MBGetROMSize.Windows='BU.Hardware.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.Android='BU.Hardware.Android.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.BSD='BU.Hardware.Motherboard.BSD.GetROMSize';
+alias BU.MBGetROMSize.Haiku='BU.Hardware.Haiku.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.Linux='BU.Hardware.Linux.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.OSX='BU.Hardware.OSX.Motherboard.GetROMSize';
+alias BU.MBGetROMSize.Windows='BU.Hardware.Windows.Motherboard.GetROMSize';
 
 alias BU.MBGetRuntimeSize='BU.Hardware.Motherboard.GetRuntimeSize';
-alias BU.MBGetRuntimeSize.Android='BU.Hardware.Motherboard.GetRuntimeSize';
-alias BU.MBGetRuntimeSize.BSD='BU.Hardware.Motherboard.GetRuntimeSize';
-alias BU.MBGetRuntimeSize.Haiku='BU.Hardware.Motherboard.GetRuntimeSize';
-alias BU.MBGetRuntimeSize.Linux='BU.Hardware.Motherboard.GetRuntimeSize';
-alias BU.MBGetRuntimeSize.OSX='BU.Hardware.Motherboard.GetRuntimeSize';
-alias BU.MBGetRuntimeSize.Windows='BU.Hardware.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.Android='BU.Hardware.Android.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.BSD='BU.Hardware.BSD.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.Haiku='BU.Hardware.Haiku.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.Linux='BU.Hardware.Linux.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.OSX='BU.Hardware.OSX.Motherboard.GetRuntimeSize';
+alias BU.MBGetRuntimeSize.Windows='BU.Hardware.Windows.Motherboard.GetRuntimeSize';
 
 alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
-alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
-alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
-alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
-alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
-alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
-alias BU.MBGetVendor='BU.Hardware.Motherboard.GetVendor';
+alias BU.MBGetVendor.Android='BU.Hardware.Android.Motherboard.GetVendor';
+alias BU.MBGetVendor.BSD='BU.Hardware.BSD.Motherboard.GetVendor';
+alias BU.MBGetVendor.Haiku='BU.Hardware.Haiku.Motherboard.GetVendor';
+alias BU.MBGetVendor.Linux='BU.Hardware.Linux.Motherboard.GetVendor';
+alias BU.MBGetVendor.OSX='BU.Hardware.OSX.Motherboard.GetVendor';
+alias BU.MBGetVendor.Windows='BU.Hardware.Windows.Motherboard.GetVendor';
 
 ## ----------------------------------------------
 
