--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -216,12 +216,36 @@ alias BU.MBGetVendor.Windows='BU.Hardware.Windows.Motherboard.GetVendor';
 ## SUB-CATEGORY : "GETTING BIOS LANGUAGE INFORMATIONS"
 
 alias BU.MBGetLangDescFmt='BU.Hardware.Motherboard.GetLanguageDescriptionFormat';
+alias BU.MBGetLangDescFmt.Android='BU.Hardware.Android.Motherboard.GetLanguageDescriptionFormat';
+alias BU.MBGetLangDescFmt.BSD='BU.Hardware.BSD.Motherboard.GetLanguageDescriptionFormat';
+alias BU.MBGetLangDescFmt.Haiku='BU.Hardware.Haiku.Motherboard.GetLanguageDescriptionFormat';
+alias BU.MBGetLangDescFmt.Linux='BU.Hardware.Linux.Motherboard.GetLanguageDescriptionFormat';
+alias BU.MBGetLangDescFmt.OSX='BU.Hardware.OSX.Motherboard.GetLanguageDescriptionFormat';
+alias BU.MBGetLangDescFmt.Windows='BU.Hardware.Windows.Motherboard.GetLanguageDescriptionFormat';
 
 alias BU.MBGetInstallableLangNB='BU.Hardware.Motherboard.GetInstallableLanguagesNumber';
+alias BU.MBGetInstallableLangNB.Android='BU.Hardware.Android.Motherboard.GetInstallableLanguagesNumber';
+alias BU.MBGetInstallableLangNB.BSD='BU.Hardware.BSD.Motherboard.GetInstallableLanguagesNumber';
+alias BU.MBGetInstallableLangNB.Haiku='BU.Hardware.Haiku.Motherboard.GetInstallableLanguagesNumber';
+alias BU.MBGetInstallableLangNB.Linux='BU.Hardware.Linux.Motherboard.GetInstallableLanguagesNumber';
+alias BU.MBGetInstallableLangNB.OSX='BU.Hardware.OSX.Motherboard.GetInstallableLanguagesNumber';
+alias BU.MBGetInstallableLangNB.Windows='BU.Hardware.Windows.Motherboard.GetInstallableLanguagesNumber';
 
 alias BU.MBGetInstallableLangList='BU.Hardware.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.Android='BU.Hardware.Android.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.BSD='BU.Hardware.BSD.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.Haiku='BU.Hardware.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.Linux='BU.Hardware.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.OSX='BU.Hardware.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.Windows='BU.Hardware.Motherboard.GetInstallableLanguagesList';
 
 alias BU.MBGetInstalledLang='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.Android='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.BSD='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.Haiku='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.Linux='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.OSX='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.Windows='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
 
 ## ----------------------------------------------
 
